--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "node index.js"
   },
   "dependencies": {
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "mongoose": "5.4.15"
   }
 }
