--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,42 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "build": "tsc",
+    "start": "node ./dist/index.js",
+    "pretty": "prettier --write \"./**/*.*\"",
+    "lint:fix": "tslint -p . -c tslint.json -t stylish --fix"
   },
   "dependencies": {
     "express": "4.16.4",
     "mongoose": "5.4.15"
+  },
+  "devDependencies": {
+    "@types/express": "4.16.1",
+    "@types/mongoose": "5.3.19",
+    "@types/node": "11.9.5",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.4",
+    "nodemon": "1.18.10",
+    "prettier": "1.16.4",
+    "tslint": "5.13.0",
+    "tslint-config-airbnb": "5.11.1",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "3.3.3333"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "tslint --fix",
+      "git add"
+    ],
+    "./**/*.*": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
