--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,6 +8,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
