--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "debug": "nodemon --inspect=0.0.0.0:9229 --watch 'src/**/*.ts' --require ts-node/register src/index.ts",
     "build": "tsc",
     "start": "node ./dist/index.js",
     "pretty": "prettier --write \"./**/*.*\"",
@@ -22,6 +23,7 @@
     "lint-staged": "8.1.4",
     "nodemon": "1.18.10",
     "prettier": "1.16.4",
+    "ts-node": "8.0.2",
     "tslint": "5.13.0",
     "tslint-config-airbnb": "5.11.1",
     "tslint-config-prettier": "1.18.0",
