--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
     "lint:fix": "tslint -p . -c tslint.json -t stylish --fix"
   },
   "dependencies": {
+    "bunyan": "1.8.12",
     "express": "4.16.4",
     "mongoose": "5.4.15"
   },
   "devDependencies": {
+    "@types/bunyan": "1.8.5",
     "@types/express": "4.16.1",
     "@types/mongoose": "5.3.19",
     "@types/node": "11.9.5",
