--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,9 +12,10 @@
     "noUnusedParameters": true,
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    }
+      "*": ["node_modules/*", "types/*"]
+    },
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["./src/**/*"],
-  "exclude": ["node_modules", "./dist"]
+  "exclude": ["node_modules", "./types", "./dist"]
 }
