--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "debug": "yarn build && node --inspect=0.0.0.0:9229 ./dist/index.js",
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
     "start": "node ./dist/index.js",
     "pretty": "prettier --write \"./**/*.*\"",
     "lint:fix": "tslint -p . -c tslint.json -t stylish --fix"
@@ -25,6 +25,7 @@
     "lint-staged": "8.1.4",
     "nodemon": "1.18.10",
     "prettier": "1.16.4",
+    "rimraf": "2.6.3",
     "ts-node": "8.0.2",
     "tslint": "5.13.0",
     "tslint-config-airbnb": "5.11.1",
