setup .env, create schema and connect to database

--- a/server/docker/web/Dockerfile
+++ b/server/docker/web/Dockerfile
@@ -2,7 +2,7 @@ FROM node:11.10.0-alpine
 WORKDIR /usr/src/app
 COPY package.json .
 COPY yarn.lock .
-RUN yarn
+RUN yarn install
 COPY . .
 EXPOSE 3000
 CMD ["yarn", "dev"]
