--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,17 @@
     "lint:fix": "tslint -p . -c tslint.json -t stylish --fix"
   },
   "dependencies": {
+    "body-parser": "1.18.3",
     "bunyan": "1.8.12",
+    "cors": "2.8.5",
+    "dotenv": "6.2.0",
     "express": "4.16.4",
     "mongoose": "5.4.15"
   },
   "devDependencies": {
     "@types/bunyan": "1.8.5",
+    "@types/cors": "2.8.4",
+    "@types/dotenv": "6.1.0",
     "@types/express": "4.16.1",
     "@types/mongoose": "5.3.19",
     "@types/node": "11.9.5",
