add user repository and service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "booststrap",
         "bootstrapper",
         "mern",
-        "middlewares"
+        "middlewares",
+        "respositories"
     ]
 }
