--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "2.8.5",
     "dotenv": "6.2.0",
     "express": "4.16.4",
+    "jsonwebtoken": "8.5.0",
     "mongoose": "5.4.15"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/cors": "2.8.4",
     "@types/dotenv": "6.1.0",
     "@types/express": "4.16.1",
+    "@types/jsonwebtoken": "8.3.0",
     "@types/mongoose": "5.3.19",
     "@types/node": "11.9.5",
     "husky": "1.3.1",
