move types folder inside src folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "bootstrapper",
         "mern",
         "middlewares",
-        "respositories"
+        "respositories",
+        "zeit"
     ]
 }
