--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,10 +12,10 @@
     "noUnusedParameters": true,
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "types/*"]
+      "*": ["node_modules/*", "./src/types/*"]
     },
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["./src/**/*"],
-  "exclude": ["node_modules", "./types", "./dist"]
+  "exclude": ["node_modules", "./src/types", "./dist"]
 }
