--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "tslint": "5.13.0",
     "tslint-config-airbnb": "5.11.1",
     "tslint-config-prettier": "1.18.0",
-    "tslint-react": "3.6.0"
+    "tslint-react": "3.6.0",
+    "typescript": "3.3.3333"
   },
   "husky": {
     "hooks": {
